# comp0034-wk1

./: README.md  pyproject.toml
assets/: github.css  pdf.css
flask_1/: app.py
flask_app1/: app1.py
flask_app2/: app2.py
flask_app2/templates/: index.html  layout.html
