[project]
name = "comp0034-1"
version = "1.0.0"
description = "COMP0034 Week 1 coding activities"
dependencies = [
    "flask",
]

[build-system]
requires = [
    "setuptools>=65.0",
    "setuptools-scm[toml]>=6.2.3",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    # pytest's own futurewarnings
    "ignore::pytest.PytestExperimentalApiWarning",
]
