[project]
name = "comp0034-1"
version = "1.0.0"
description = "COMP0034 Week 1 coding activities"
dependencies = [
    "flask",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["flask_app1", "flask_app2", "paralympics"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)